# sm-ext-Log4SM

./: CMakeLists.txt  configure.cmake
cmake/: All.cmake  CompileOption.cmake
cmake/AlliedModders/: MetaMod.cmake  SourceMod.cmake
cmake/Source/: SourceEngine.cmake
src/: CMakeLists.txt  extension.cpp  extension.h  smsdk_config.h
src/common/: shared.h
src/detail/: ext.cpp  ext.h  shared.h
src/log4sm/: interface.md  main.cpp  main.h  shared.h  sm_handler.cpp  sm_handler.h  sm_interface.cpp  sm_interface.h  sp_native.cpp  sp_native.h  spdlog_non_lock_file_sink.h  spdlog_se_console_sink.h
